unpackaged/main/default/objects/Account_Barrel_Recipe__c/Account_Barrel_Recipe__c.object-meta.xml
<CustomObject>
    <label>Account Barrel Recipe</label>
    <nameField>
        <displayFormat>RECIPE-{00000}</displayFormat>
        <label>Account Barrel Recipe Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Barrel Recipes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>