unpackaged/main/default/objects/Account_Barrel_Recipe__c/fields/Barrel_Recipe__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Recipe__c</fullName>
    <label>Barrel Recipe</label>
    <referenceTo>Barrel_Recipe__c</referenceTo>
    <relationshipName>Account_Recipes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>